force-app/main/default/objects/Product_Event__e/Product_Event__e.object-meta.xml
<CustomObject>
    <description>This platform event is on the object Product. This is for integration with both NetSuite item and CMP Product.</description>
    <label>Product Event</label>
    <pluralLabel>Product Events</pluralLabel>
</CustomObject>