force-app/main/default/objects/Product_Event__e/fields/Can_be_fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Can_be_fulfilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can be fulfilled</label>
    <type>Checkbox</type>
</CustomField>