force-app/main/default/objects/Product_Event__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Product ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>