force-app/main/default/objects/Product_Event__e/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>