force-app/main/default/objects/Product_Event__e/fields/Saleable__c.field-meta.xml
<CustomField>
    <fullName>Saleable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saleable</label>
    <type>Checkbox</type>
</CustomField>